# loom

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  error.rs  lib.rs  pricing.rs
src-tauri/src/ollama/: chat.rs  generate.rs  mod.rs  streaming.rs  templates.rs
src-tauri/src/provider/: anthropic.rs  mod.rs  ollama_provider.rs  sse.rs
src-tauri/src/store/: io.rs  migrate.rs  mod.rs  ops.rs  schema.rs  validator.rs
src/components/: BranchTabs.tsx  CommitGraph.tsx  Composer.tsx  ConfirmModal.tsx  DiffMatrix.tsx  DiffPane.tsx  EditPanel.tsx  ErrorBoundary.tsx  ExportModal.tsx  GarakModal.tsx  JudgeModal.tsx  LogprobsBody.tsx  MarkdownBody.tsx  NewSessionView.tsx  RerunPopover.tsx  SessionSidebar.tsx  SettingsModal.tsx  ShortcutsOverlay.tsx  SweepLauncher.tsx  SweepModal.tsx  Timeline.tsx  TurnCard.tsx  WelcomeModal.tsx
src/lib/: branchColors.ts  format.ts  ipc.ts  stats.ts  store.ts
src/lib/__tests__/: format.test.ts  ipc.test.ts  stats.test.ts
