[package]
name = "loom"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "loom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.5.0"
tokio = { version = "1.52.0", features = ["full"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
ulid = "1.2.1"
futures = "0.3.32"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "stream"] }
async-stream = "0.3.6"
time = { version = "0.3.47", features = ["formatting", "macros"] }
tauri-plugin-window-state = "2.4.1"

[dev-dependencies]
tempfile = "3.27.0"

